<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CTXTrack</string>
    <string name="submit_and_continue_to_first_stop">Submit and Depart to First Stop</string>
    <string name="ctx_track">CTX Track</string>
    <string name="action_settings">Settings</string>
    <string name="insert_truck_number">Insert Truck #</string>
    <string name="insert_trailer_number">Insert Trailer #</string>
    <string name="insert_start_of_shift_time">Insert Start of Shift Time</string>
    <string name="insert_delran_departure_time">Insert Initial Departure Time</string>
    <string name="title_activity_first_stop">FirstStop</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="insert_login">Insert Username</string>
    <string name="username">Username:</string>
    <string name="insert_username">Insert Username!</string>
    <string name="password">Password:</string>
    <string name="insert_password">Insert Password!</string>
    <string name="login_and_begin_shift">Login and Begin Shift</string>
    <string name="stop_1">Stop #1</string>
    <string name="click_upon_arrival_first">Click Upon Arrival to 1st Stop</string>
    <string name="click_first_departure">Click Upon Departure of 1st Stop</string>
    <string name="if_you_dropped_trailer">IF YOU DROPPED A TRAILER, ENTER NEW TRAILER NUMBER HERE</string>
    <string name="insert_new_trailer_number">Insert New Trailer #</string>
    <string name="title_activity_second_stop">SecondStop</string>
    <string name="stop_2">Stop #2 or CTX</string>
    <string name="stop_3">Stop #3 or CTX</string>
    <string name="stop_4">Stop #4 or CTX</string>
    <string name="stop_5">Stop #5 or CTX</string>
    <string name="stop_6">Stop #6 or CTX</string>
    <string name="stop_7">Stop #7 or CTX</string>
    <string name="stop_8">Stop #8 or CTX</string>
    <string name="stop_9">Stop #9 or CTX</string>
    <string name="stop_10">Stop #10 or CTX</string>
    <string name="notes">Add Any Extra Notes for Dispatchers Here</string>
    <string name="click_upon_arrival_second">Click Upon Arrival to 2nd Stop</string>
    <string name="click_upon_arrival_third">Click Upon Arrival to 3rd Stop</string>
    <string name="click_upon_arrival_fourth">Click Upon Arrival to 4th Stop</string>
    <string name="click_upon_arrival_fifth">Click Upon Arrival to 5th Stop</string>
    <string name="click_upon_arrival_sixth">Click Upon Arrival to 6th Stop</string>
    <string name="click_upon_arrival_seventh">Click Upon Arrival to 7th Stop</string>
    <string name="click_upon_arrival_eighth">Click Upon Arrival to 8th Stop</string>
    <string name="click_upon_arrival_ninth">Click Upon Arrival to 9th Stop</string>
    <string name="click_upon_arrival_tenth">Click Upon Arrival to 10th Stop</string>
    <string name="click_second_departure">Click Upon Departure of 2nd Stop</string>
    <string name="click_third_departure">Click Upon Departure of 3rd Stop</string>
    <string name="click_fourth_departure">Click Upon Departure of 4th Stop</string>
    <string name="click_fifth_departure">Click Upon Departure of 5th Stop</string>
    <string name="click_sixth_departure">Click Upon Departure of 6th Stop</string>
    <string name="click_seventh_departure">Click Upon Departure of 7th Stop</string>
    <string name="click_eighth_departure">Click Upon Departure of 8th Stop</string>
    <string name="click_ninth_departure">Click Upon Departure of 9th Stop</string>
    <string name="click_tenth_departure">Click Upon Departure of 10th Stop</string>
    <string name="click_back_in_delran">Click Upon Arrival to CTX Home Location</string>
    <string name="end_shift">End Shift</string>
    <string name="truck_number_id">TRUCK NUMBER:</string>
    <string name="trailer_number_id">TRAILER NUMBER:</string>
    <string name="arrival_time_submitted">Arrival Time Submitted!</string>
    <string name="departure_time_submitted">Departure Time Submitted!</string>
    <string name="ended_shift_submitted">Shift Ended!</string>
    <string name="or_text">OR</string>
    <string name="title_activity_back_in_delran">BackToCTX</string>
    <string name="submit_button_continue_next_stop">Submit and Continue to Next Stop</string>
    <string name="add_notes_for_dispatchers_here">INSERT WHO SIGNED PAPERWORK AND ADD ANY EXTRA NOTES</string>
    <string name="insert_truck_mileage">Insert Truck Mileage</string>
    <string name="user">USER:</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login44">Login44</string>
    <string name="register">Register</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_third_stop">ThirdStop</string>
    <string name="title_activity_fourth_stop">FourthStop</string>
    <string name="title_activity_fifth_stop">FifthStop</string>
    <string name="title_activity_sixth_stop">SixthStop</string>
    <string name="updating_time">Updating Time...</string>
    <string name="please_complete_all_fields">Please Complete All Fields!</string>
    <string name="arrival_time_already_submitted">Arrival Time Already Submitted!</string>
    <string name="stop1_arrival">Stop # 1 Arrival</string>
    <string name="stop1_departure">Stop # 1 Departure</string>
    <string name="stop2_arrival">Stop # 2 Arrival</string>
    <string name="stop2_departure">Stop # 2 Departure</string>
    <string name="stop3_arrival">Stop # 3 Arrival</string>
    <string name="stop3_departure">Stop # 3 Departure</string>
    <string name="stop4_arrival">Stop # 4 Arrival</string>
    <string name="stop4_departure">Stop # 4 Departure</string>
    <string name="stop5_arrival">Stop # 5 Arrival</string>
    <string name="stop5_departure">Stop # 5 Departure</string>
    <string name="stop6_arrival">Stop # 6 Arrival</string>
    <string name="stop6_departure">Stop # 6 Departure</string>
    <string name="stop7_arrival">Stop # 7 Arrival</string>
    <string name="stop7_departure">Stop # 7 Departure</string>
    <string name="stop8_arrival">Stop # 8 Arrival</string>
    <string name="stop8_departure">Stop # 8 Departure</string>
    <string name="stop9_arrival">Stop # 9 Arrival</string>
    <string name="stop9_departure">Stop # 9 Departure</string>
    <string name="stop10_arrival">Stop # 10 Arrival</string>
    <string name="stop10_departure">Stop # 10 Departure</string>
    <string name="arrived_back_to_delran">Arrived Back To CTX Home</string>
    <string name="back_in_delran">Arrived Back To CTX!</string>
    <string name="still_in_delran">Still at CTX Home</string>
    <string name="enter_arrival_time_into_notes">Please Enter Arrival Time In Notes!!</string>
    <string name="next_time_arrival">Next Time Please Click Arrival Button Upon Arrival!</string>
    <string name="departing_delran">Departing CTX</string>
    <string name="shift_ended">Shift Ended</string>
    <string name="click_when_departing_delran">Click Here When Departing CTX</string>
    <string name="logged_out">Logged Out!</string>
    <string name="create_new_user">Create Username!</string>
    <string name="create_new_password">Create Password!</string>
    <string name="in_transit">In Transit to Next Stop</string>
    <string name="confirm_password">Confirm Password!</string>
    <string name="passwords_dont_match">Password\'s Do Not Match!</string>
    <string name="title_activity_seventh_stop">SeventhStop</string>
    <string name="title_activity_eighth_stop">EighthStop</string>
    <string name="title_activity_ninth_stop">NinthStop</string>
    <string name="title_activity_tenth_stop">TenthStop</string>

</resources>
