<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar"
    android:paddingLeft="@dimen/activity_horizontal_margin_small"
    android:paddingRight="@dimen/activity_horizontal_margin_small"
    android:paddingBottom="@dimen/activity_vertical_margin_small"
    android:paddingTop="@dimen/activity_vertical_margin_small"
    tools:context=".MainActivity"

    >



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/truck_number_editText"
        android:hint="@string/insert_truck_number"
        android:layout_below="@+id/ctx_logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trailer_editText"

        android:hint="@string/insert_trailer_number"
        android:layout_below="@+id/truck_number_editText"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ctx_logo"
        android:src="@drawable/ctx2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delranDepartureTime_editText"
        android:inputType="time"
        android:hint="@string/insert_delran_departure_time"
        android:layout_below="@+id/truck_mileage"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_and_continue_to_first_stop"
        android:id="@+id/submit_button"
        android:layout_below="@+id/delranDepartureTime_editText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/truck_mileage"
        android:inputType="number"
        android:hint="@string/insert_truck_mileage"
        android:layout_below="@+id/trailer_editText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user"
        android:id="@+id/userMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/userIdMain"
        android:layout_below="@+id/userMain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>


</RelativeLayout>
