<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.NoTitleBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jb.jb.ctxtrack.Login"
    android:id="@+id/relative_layout"
    >

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/ctxBanner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/darker_gray" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_and_begin_shift"
        android:textSize="17dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordTextView"
        android:layout_centerHorizontal="true"
        android:hint="@string/insert_password"
        android:textSize="17dp">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/ctxBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/usernameTextView"
        android:layout_alignLeft="@+id/usernameTextView"
        android:layout_alignStart="@+id/usernameTextView"
        android:layout_centerHorizontal="true"
        android:hint="@string/insert_username"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:layout_below="@+id/register"
        android:layout_alignRight="@+id/passwordTextView"
        android:layout_alignEnd="@+id/passwordTextView"
        android:layout_marginTop="15dp" />

</RelativeLayout>