<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jb.jb.ctxtrack.SecondStop"
    android:id="@+id/">

    <TextView
        android:text="@string/stop_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ctx2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_upon_arrival_second"
        android:id="@+id/arrivedFirstStop"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:textSize="17dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_second_departure"
        android:id="@+id/departedFirstStop"
        android:layout_toEndOf="@+id/checkBox2"
        android:gravity="center"
        android:textSize="17dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/arrivedFirstStop"
        android:layout_alignStart="@+id/arrivedFirstStop"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_toStartOf="@+id/arrivedFirstStop"
        android:layout_alignBaseline="@+id/arrivedFirstStop"
        android:layout_alignBottom="@+id/arrivedFirstStop"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox2"
        android:layout_alignBottom="@+id/departedFirstStop"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_you_dropped_trailer"
        android:id="@+id/textView2"
        android:textSize="18dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_above="@+id/editText"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:gravity="center_horizontal"
        android:hint="@string/insert_new_trailer_number"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_back_in_delran"
        android:id="@+id/button"
        android:layout_below="@+id/departedFirstStop"
        android:layout_alignLeft="@+id/departedFirstStop"
        android:layout_alignStart="@+id/departedFirstStop"
        android:layout_marginTop="59dp"
        android:textSize="17dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_shift"
        android:id="@+id/button2"
        android:layout_toEndOf="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|right|center"/>

</RelativeLayout>
