<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:theme="@android:style/Theme.NoTitleBar"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:context="com.jb.jb.ctxtrack.FourthStop">

    <TextView
        android:text="@string/stop_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:id="@+id/stopNumber"
        android:layout_below="@+id/trailerNumID"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ctx2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_upon_arrival_fourth"
        android:id="@+id/arrivedToStop"
        android:textSize="17sp"
        android:paddingTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/stopNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_fourth_departure"
        android:id="@+id/departedFourthStop"
        android:textSize="17sp"
        android:layout_below="@+id/notes"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:paddingTop="15dp"
        android:gravity="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_alignBottom="@+id/arrivedToStop"
        android:layout_alignBaseline="@+id/arrivedToStop"
        android:layout_toLeftOf="@+id/arrivedToStop"
        android:layout_toStartOf="@+id/arrivedToStop"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:checked="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterTrailerEditText"
        android:gravity="center_horizontal"
        android:hint="@string/if_you_dropped_trailer"
        android:layout_below="@+id/backInDelranButton"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_back_in_delran"
        android:id="@+id/backInDelranButton"
        android:textSize="17sp"
        android:layout_below="@+id/orTextView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/truck_number_id"
        android:id="@+id/truckNum"
        android:layout_below="@+id/userIdStop4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/truckNumID"
        android:layout_below="@+id/truckNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trailer_number_id"
        android:id="@+id/trailerNum"
        android:layout_below="@+id/truckNumID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/trailerNumID"
        android:layout_below="@+id/trailerNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or_text"
        android:id="@+id/orTextView"
        android:layout_below="@+id/arrivedToStop"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notes"
        android:hint="@string/add_notes_for_dispatchers_here"
        android:gravity="center"
        android:layout_below="@+id/enterTrailerEditText"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user"
        android:id="@+id/userStop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/userIdStop4"
        android:layout_below="@+id/userStop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

</RelativeLayout>
