<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jb.jb.ctxtrack.BackInDelran"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.NoTitleBar"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/relativeLayout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trailer_editText"

        android:hint="@string/insert_trailer_number"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ctx_logo"
        android:src="@drawable/ctx2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_shift"
        android:id="@+id/endShiftButton"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/trailerNumID"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or_text"
        android:id="@+id/textView"
        android:textColor="@android:color/black"
        android:layout_below="@+id/endShiftButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_when_departing_delran"
        android:id="@+id/submitAndContinue"
        android:layout_below="@+id/notesEditText"
        android:layout_toRightOf="@+id/trailerNumID"
        android:layout_toEndOf="@+id/trailerNumID"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/truck_number_id"
        android:id="@+id/truckNum"
        android:layout_below="@+id/userIdDelran"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/truckNumID"
        android:layout_below="@+id/truckNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trailer_number_id"
        android:id="@+id/trailerNum"
        android:layout_below="@+id/truckNumID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/trailerNumID"
        android:layout_below="@+id/trailerNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user"
        android:id="@+id/userStop1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/userIdDelran"
        android:layout_below="@+id/userStop1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notesEditText"
        android:layout_marginTop="40dp"
        android:hint="@string/add_notes_for_dispatchers_here"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/trailer_editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
