<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"

    tools:context="com.jb.jb.ctxtrack.StartScreen">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctx_banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:textSize="25dp"
        android:textColor="@android:color/black"
        android:id="@+id/textView3"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ctx_banner"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/header"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"

        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:hint="@string/insert_username"
        android:textSize="17dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:hint="@string/insert_password"
        android:textSize="17dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>

</RelativeLayout>
